feat(api): implement GET /foodbank (#3)
